fix: Corrección sonarqube excepciones personalizadas